42/Computor v1/erobert/out
srcs/Polynomial.cpp:88:33: error: use of undeclared identifier 'sqrt'
                _solution[0] = (-_vector[1] + sqrt(_delta)) / (2 * _vector[2]);
                                              ^
srcs/Polynomial.cpp:89:33: error: use of undeclared identifier 'sqrt'
                _solution[1] = (-_vector[1] - sqrt(_delta)) / (2 * _vector[2]);
                                              ^
srcs/Polynomial.cpp:94:18: error: use of undeclared identifier 'sqrt'
                _solution[1] = sqrt(-_delta) / (2 * _vector[2]);
                               ^
srcs/Polynomial.cpp:100:26: error: return type of out-of-line definition of 'Polynomial::quake' differs from that in the declaration
float                                                           Polynomial::quake(float x)
                                                                            ^
srcs/Polynomial.hpp:44:12: note: previous declaration is here
        double                          quake(float x);
                                        ^
srcs/Polynomial.cpp:107:7: error: use of undeclared identifier 'number'; did you mean 'isnumber'?
        x2 = number * 0.5F;
             ^~~~~~
             isnumber
/usr/include/ctype.h:323:1: note: 'isnumber' declared here
isnumber(int _c)
^
srcs/Polynomial.cpp:107:14: error: invalid operands to binary expression ('int (*)(int)' and 'float')
        x2 = number * 0.5F;
             ~~~~~~ ^ ~~~~
srcs/Polynomial.cpp:108:6: error: use of undeclared identifier 'number'; did you mean 'isnumber'?
        y = number;
            ^~~~~~
            isnumber
/usr/include/ctype.h:323:1: note: 'isnumber' declared here
isnumber(int _c)
^
srcs/Polynomial.cpp:108:4: error: assigning to 'float' from incompatible type 'int (int)'
        y = number;
          ^ ~~~~~~
8 errors generated.
make: *** [objs/Polynomial.o] Error 1
